[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "replyowl"
dynamic = ["version"]
description = "Email reply body generator for HTML and text in Python"
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Stephen Kent", email = "smkent@smkent.net" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = []
dependencies = [
    "beautifulsoup4",
    "html2text",
]

[project.urls]
Homepage = "https://smkent.github.io/replyowl"
Repository = "https://github.com/smkent/replyowl"
Issues = "https://github.com/smkent/replyowl/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "poethepoet>=0.42",
    "prek>=0.4",
    "pysentry-rs>=0.4",
    "pytest>=9",
    "pytest-cov>=7",
    "pytest-sugar>=1",
    "pytest-xdist>=3",
    "ruff>=0.15",
    "syrupy>=5",
    "ty>=0.0.38",
]
docs = [
    "mkdocstrings[python]>=1",
    "zensical>=0.0.43",
]

[tool.bumpversion]
commit = false
tag = true
tag_name = "v{new_version}"
tag_message = ""
push = true

[tool.hatch.build.targets.sdist]
include = ["/replyowl", "/tests", "*.md", "LICENSE"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.poe.executor]
type = "uv"

[tool.poe.tasks.audit]
cmd = "pysentry-rs"
help = "Run dependencies security audit"

[tool.poe.tasks.build]
cmd = "uv build"
help = "Build distribution package"

[tool.poe.tasks.docs-build]
cmd = "zensical build -c"
help = "Build documentation site"

[tool.poe.tasks.docs]
sequence = [
    {ref = "docs-build"},
    {cmd = "zensical serve -a \"${host}:${port}\""},
]
help = "Run documentation site locally"

[tool.poe.tasks.docs.args.host]
options = ['--host', '-h']
help = "Bind IP"
default = "localhost"

[tool.poe.tasks.docs.args.port]
positional = true
help = "Bind Port"
default = "8000"

[tool.poe.tasks.init]
sequence = [
    {shell = "[ ! -d .git ] || { echo \"git repository already exists\"; exit 1; }"},
    {cmd = "git init"},
    {ref = "setup"},
    {cmd = "git remote add origin https://github.com/smkent/replyowl"},
    {cmd = "git config --local remote.origin.pushurl git@github.com:smkent/replyowl.git"},
    {cmd = "git add ."},
    {cmd = "git commit -m 'Create project from template'"},
]
help = "Initialize git repository once on project creation"

[tool.poe.tasks.lint]
cmd = "prek run --all-files"
help = "Run all formatters and static checks"

[tool.poe.tasks.lt]
sequence = [{ref = "lint"}, {ref = "test"}]
help = "Run all formatters, static checks and tests"

[tool.poe.tasks.release]
cmd = "bump-my-version bump -v"
help = "Create and push a release tag (patch/minor/major)"

[tool.poe.tasks.setup]
sequence = [
    {cmd = "uv sync"},
    {cmd = "prek install"},
]
help = "Install project dependencies and git hooks"

[tool.poe.tasks.snapup]
cmd = "pytest --snapshot-update --numprocesses 0"
help = "Update test snapshots"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run tests"

[tool.poe.tasks.test-versions]
sequence = ["test-py310", "test-py311", "test-py312", "test-py313", "test-py314"]
help = "Run tests across all Python versions"

[tool.poe.tasks.test-py310]
cmd = "pytest"
executor = {isolated = true, python = "3.10"}
help = "Run tests using Python 3.10"

[tool.poe.tasks.test-py311]
cmd = "pytest"
executor = {isolated = true, python = "3.11"}
help = "Run tests using Python 3.11"

[tool.poe.tasks.test-py312]
cmd = "pytest"
executor = {isolated = true, python = "3.12"}
help = "Run tests using Python 3.12"

[tool.poe.tasks.test-py313]
cmd = "pytest"
executor = {isolated = true, python = "3.13"}
help = "Run tests using Python 3.13"

[tool.poe.tasks.test-py314]
cmd = "pytest"
executor = {isolated = true, python = "3.14"}
help = "Run tests using Python 3.14"

[tool.poe.tasks.ti]
cmd = "pytest --numprocesses 0 --no-cov -vv"
help = "Run tests with debug friendly options"

[tool.pytest]
addopts = [
    "-ra",
    "--cov=replyowl",
    "--strict-config",
    "--strict-markers",
    "--numprocesses",
    "auto",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["replyowl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 79
output-format = "concise"
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # Trailing comma missing
    "D1",  # Missing docstring presence rules
    "EM",  # flake8-errmsg
    "G004",  # Logging statement uses f-string
    "PLR",  # pylint Refactor
    "S607",  # Starting a process with a partial executable path
    "TD",  # flake8-todos
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-first-party = ["replyowl"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # flake8-unused-arguments
    "S101",  # Use of assert detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
fallback-version = "0.0.0"
